--- a/smartdns.conf
+++ b/smartdns.conf
@@ -3,7 +3,7 @@ server-name smartdns
 bind :53 -no-rule-addr -no-rule-nameserver -no-rule-ipset no-rule-soa no-dualstack-selection
 
 # 域名结果缓存个数
-cache-size 204800
+cache-size 10240
 #域名预先获取功能 [yes|no]
 prefetch-domain yes
 #允许的最小TTL值 远程查询结果 10分钟过期重新查询
@@ -12,7 +12,7 @@ rr-ttl-min 10
 serve-expired yes
 
 #fatal,error,warn,notice,info,debug
-log-level warn
+log-level error
 log-file /var/log/smartdns.log
 
 server 8.8.8.8
@@ -21,7 +21,7 @@ server 9.9.9.9
 server 208.67.222.222
 
 #测速模式选择 [ping|tcp:[80]|none]
-speed-check-mode tcp:443,tcp:80,ping
+speed-check-mode tcp:443,ping,tcp:80
 
 #强制AAAA地址返回SOA [yes|no] 禁止返回ipv6
 force-AAAA-SOA yes
