--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "smartXray",
-    "description": "Deploy smartdns and xray on Heroku.",
-    "keywords": ["xray", "smartdns"],
-    "website": "https://blog.session.pub",
+    "description": "Deploy xray on Heroku.",
+    "keywords": ["xray"],
+    "website": "",
     "repository": "https://github.com/qiumzh/smartXray.git",
     "stack": "container"
 }
